--- a/package.json
+++ b/package.json
@@ -75,12 +75,14 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.1",
     "chalk": "^5.5.0",
+    "events": "^3.3.0",
     "metacog": "^0.1.0",
     "uuid": "^10.0.0",
     "wait-on": "^8.0.4",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22.17.0",
